# Boo-Engine

./: .gitattributes  .gitignore  Boo-Engine.sln  Boo-Engine.vcxproj  Boo-Engine.vcxproj.filters  CMakeLists.txt  README.Win.md  README.md  app.cpp  build.md  qqq
engine/: CMakeLists.txt  boo.cpp  boo.h  engine.cpp  engine.h  log.h  readme.md
engine/core/: game.cpp  game.h
engine/core/alpha/: alpha.cpp  alpha.h
engine/core/asset/: asset-builtin.cpp  asset-builtin.h  asset-cache.cpp  asset-cache.h  asset-load.cpp  asset-load.h  asset-manager.cpp  asset-manager.h  asset-struct.h  asset-task.cpp  asset-task.h  asset-type.h  asset.cpp  asset.h  audio-asset.cpp  audio-asset.h  bmfont-asset.cpp  bmfont-asset.h  gltf-asset.cpp  gltf-asset.h  material-asset.cpp  material-asset.h  mesh-asset.cpp  mesh-asset.h  readme.md  scene-asset.cpp  scene-asset.h  shader-asset.cpp  shader-asset.h  texture-asset.cpp  texture-asset.h
engine/core/assets/: asset-cache.cpp  asset-cache.h  asset-load.cpp  asset-load.h  asset-struct.h  asset-task.cpp  asset-task.h  asset.cpp  asset.h  assets-manager.cpp  assets-manager.h  assets.cpp  assets.h  material-asset.cpp  material-asset.h  material.cpp  material.h  readme.md  scene-asset.cpp  scene-asset.h  shader-asset.cpp  shader-asset.h  shader.cpp  shader.h  texture-asset.cpp  texture-asset.h  texture.cpp  texture.h
engine/core/audio/: audio-manager.cpp  audio-manager.h  audio-system.cpp  audio-system.h  audio-type.h  audio.cpp  audio.h
engine/core/component/: component-factory-impl.h  component-factory.cpp  component-factory.h  component-property-reflect.h  component-property-register.h  component-register.h  component-type.h  component.cpp  component.h  readme.md
engine/core/component/ui/: ui-layout-horizontal.cpp  ui-layout-horizontal.h  ui-mask.cpp  ui-mask.h  ui-widget.cpp  ui-widget.h
engine/core/components/3d/: gltf-component.cpp  gltf-component.h
engine/core/components/tool/: editor-camera.cpp  editor-camera.h  ground-grid.cpp  ground-grid.h  readme.md
engine/core/components/ui/: node-input-event-intercept.cpp  node-input-event-intercept.h
engine/core/config/: config-image.h
engine/core/event/: event.h
engine/core/font/: bmfont-manager.cpp  bmfont-manager.h  freetype-mgr.cpp  freetype-mgr.h
engine/core/gfx/: OFFSCREEN_RENDERING_CHANGES.md  gfx-batch.cpp  gfx-batch.h  gfx-buffer-instance.cpp  gfx-buffer-ubo.cpp  gfx-buffer-ubo.h  gfx-buffer.cpp  gfx-buffer.h  gfx-context.cpp  gfx-context.h  gfx-descriptor.cpp  gfx-descriptor.h  gfx-manager.cpp  gfx-manager.h  gfx-material.cpp  gfx-mesh.cpp  gfx-mesh.h  gfx-mgr.cpp  gfx-mgr.h  gfx-object-struct.h  gfx-object.cpp  gfx-object.h  gfx-pass-struct.h  gfx-pass.cpp  gfx-pass.h  gfx-pipeline-struct.h  gfx-pipeline.cpp  gfx-pipeline.h  gfx-push-constants.h  gfx-queue-struct.h  gfx-queue.cpp  gfx-queue.h  gfx-render-target.cpp  gfx-render-target.h  gfx-render-texture.cpp  gfx-render-texture.h  gfx-renderer.cpp  gfx-renderer.h  gfx-shader-compile.cpp  gfx-shader-compile.h  (+11 more)
engine/core/gfx/base/: gfx-buffer-instance.cpp  gfx-buffer-instance.h  gfx-buffer-ubo.cpp  gfx-buffer-ubo.h  gfx-buffer.cpp  gfx-material.cpp  gfx-material.h  gfx-mesh-struct.h  gfx-mesh.cpp  gfx-mesh.h  gfx-pass.cpp  gfx-pipeline-struct.h  gfx-pipeline.cpp  gfx-pipeline.h  gfx-push-constants.cpp  gfx-render-pass.cpp  gfx-render-pass.h  gfx-render-texture.cpp  gfx-render-texture.h  gfx-shader-struct.h  gfx-shader.cpp  gfx-shader.h  gfx-struct.h  gfx-texture.cpp  gfx-texture.h
engine/core/gfx/buffer/: gfx-buffer-ssbo.cpp  gfx-buffer-ubo.h
engine/core/gfx/built/: gfx-render-queue.h
engine/core/gfx/builtin/: gfx-batch-builtin.cpp  gfx-batch-builtin.h  gfx-builtin-queue.cpp  gfx-builtin-queue.h  gfx-builtin-renderer.cpp  gfx-builtin-renderer.h  gfx-pipeline-builtin.cpp  gfx-pipeline-builtin.h  gfx-queue-builtin.cpp  gfx-queue-builtin.h  gfx-render-pass-builtin.cpp  gfx-render-pass-builtin.h  gfx-renderer-builtin.cpp  gfx-renderer-builtin.h
engine/core/gfx/default/: gfx-default-queue.cpp  gfx-pipeline-default.cpp  gfx-pipeline-default.h  gfx-queue-default.cpp  gfx-queue-default.h  gfx-render-pass-default.cpp  gfx-render-pass-default.h  gfx-renderer-default.cpp  gfx-renderer-default.h
engine/core/gfx/descriptor/: gfx-descriptor-ui.cpp  gfx-descriptor-ui.h  gfx-descriptor.cpp  gfx-descriptor.h
engine/core/gfx/gfx-buffer/: gfx-buffer-ssbo.cpp  gfx-buffer-ssbo.h  gfx-buffer-ubo.cpp
engine/core/gfx/old/: gfx-object-struct.h  gfx-object.cpp  gfx-object.h  gfx-pipeline.cpp  gfx-pipeline.h
engine/core/gfx/pass/: gfx-pass-built-clear.cpp  gfx-pass-built-clear.h  gfx-pass-built-screen.cpp  gfx-pass-built-screen.h  gfx-pass-built-ui.cpp  (+11 more)
engine/core/global/: event.cpp  event.h  global.h
engine/core/input/: input-impl.h  input-mgr.cpp  input-mgr.h  input-struct.h  input-type.h  input.cpp  input.h  readme.md
engine/core/math/: color.cpp  color.h  mat4.cpp  mat4.h  quat.cpp  quat.h  size.cpp  size.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
engine/core/profiler/: profiler.h  profilter.cpp
engine/core/property/: property-reflect-helper.h  property-reflect-register.h  property-reflect.h  readme.md
engine/core/renderer/: camera.cpp  camera.h  readme.md  renderer-mgr.cpp  renderer-mgr.h  renderer.cpp  renderer.h
engine/core/scene/: node-2d-impl.h  node-2d.cpp  node-2d.h  node-3d-impl.h  node-3d.cpp  node-3d.h  node-base.cpp  node-base.h  node-struct.h  node-type.h  node-util.cpp  node-util.h  node.cpp  node.h  scene.cpp  scene.h
engine/core/util/: file-util.cpp  file-util.h  fmt-util.h  json-util.h  xlm-util.h
engine/core/utils/: dialog-util.cpp  dialog-util.h  file-util.cpp  file-util.h  fmt-util.cpp  fmt-util.h  json-util.h  sdf-util.cpp  sdf-util.h  time-util.cpp  time-util.h  uuid-util.cpp  uuid-util.h
engine/core/view/: view.cpp  view.h
engine/core/window/: window-mgr.cpp  window-mgr.h
engine/libs/miniaudio/: miniaudio.h
engine/libs/nlohmann/: json.hpp
engine/libs/stb/: stb_image_write.h
engine/resources/materials/: material-ui.mtl
engine/window/: window-mgr.cpp  window-mgr.h  window.cpp  window.h
(+444 files in other folders)
